--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -12,7 +12,11 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Run the private action
+      id: csharp
       uses: ./
       with:
         name: MickeyG
         whatilike: cabbages
+
+    - name: Did I Get Output
+      run: echo "please work = ${{ steps.csharp.outputs.pleasework }}"
