--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -20,3 +20,6 @@ jobs:
 
     - name: Did I Get Output
       run: echo "please work = ${{ steps.csharp.outputs.pleasework }}"
+
+    - name: Output Dad Joke
+      run: echo "${{ steps.csharp.outputs.dad-joke }}"
