--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   build_and_test:
     name: Build and test the GitHub Action
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: Checkout the repository
